# sck-core-cli

./: .flake8  README.md  core.ps1  core.py  pyproject.toml  pytest.ini
core_automation/: core.py  info.py  module.py
core_automation/cmdparser/: cmdparser.py
core_automation/configure/: __init__.py  configure.py
core_automation/domain/: __init__.py
core_automation/engine/: __init__.py  app.py  clean.py  info.py  init.py  source.py  teardown.py
core_automation/engine/deploy/: __init__.py  deploy.py
core_automation/engine/zones/: __init__.py
core_automation/execute/: invoke.py  simulate.py
core_automation/locale/en/LC_MESSAGES/: sck_core.po
core_automation/organization/: __init__.py  organization.py  user.py
core_automation/resources/: resources.py
core_automation/resources/roles/core-automation-admin/: access-policy.json.j2  trust-policy.json.j2
core_automation/run/: release.py  run.py  upload.py
core_cli/: __init__.py  apiclient.py  common.py  configure.py  console.py  core.py  environment.py  exceptions.py  info.py  module.py
core_cli/bootstrap/: __init__.py  deploy.py
core_cli/cmdparser/: __init__.py  cmdparser.py
core_cli/configure/: __init__.py  client_config.py  client_vars.py  configure.py  core_config.py
core_cli/context/: __init__.py
core_cli/context/apps/: __init__.py  apps.py
core_cli/context/clients/: __init__.py  clients.py
core_cli/context/portfolios/: __init__.py  portfolio.py
core_cli/context/zones/: __init__.py  zones.py
core_cli/deploy/: cli.py
core_cli/domain/: __init__.py  domain.py
core_cli/engine/: app.py  check_delete_vpcs.py  clean.py  common.py  database.py  engine.py  info.py  init.py  migrate.py  source.py  teardown.py  vpc.py
core_cli/engine/deploy/: __init__.py  deploy.py
core_cli/engine/zones/: __init__.py  associate.py  zones.py
core_cli/execute/: __init__.py  invoke.py  main.py  simulate.py
core_cli/execute/cli/: __init__.py  action.py  common.py  info.py  state.py
core_cli/facts/: __init__.py  facts.py
core_cli/init/: __init__.py
core_cli/organization/: __init__.py  common.py  control_tower.py  org_units.py  organization.py  scp.py  show.py  user.py
core_cli/portfolio/: __init__.py  portfolio.py
core_cli/resources/: __init__.py  core-roles.yaml  core-storage.yaml  core-users.yaml
core_cli/resources/roles/bootstrap/: bootstrap-app.yaml.j2
core_cli/resources/roles/core-automation-user/: access-policy.json.j2
core_cli/run/: __init__.py  apply.py  compile.py  deploy.py  package.py  plan.py  release.py  run.py  teardown.py  upload.py
core_cli/setup/: __init__.py  deploy.py
installer/: README.md  build-installer.ps1  build-installer.sh  coresetup.iss  runner-linux-mac.sh  runner-windows.ps1
tests/: __init__.py  run.sh  test_core.py  test_event_action.py  test_step_function.py
