[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-cli"
version = "0.0.6"
description = "Core Automation Deployment Engine Tools, SCK Module, and CLI"
authors = ["James Barwick <jbarwick@eits.com.sg>"]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = [
    "Ethan Chan <ethan.chsn@simple.com>",
    "Yunarta Kwee <yunarta.kwee@simple.com>",
]
include = ["CHANGELOG.md", "core_cli/version.py"]
homepage = "https://simple-jira.atlassian.net/wiki/spaces/FND/overview"
documentation = "https://simple-jira.atlassian.net/wiki/spaces/FND/overview"
repository = "https://bitbucket.dev.aws.simple.com/scm/fnd/simple-core-automation.git"
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_cli"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.urls]
"Bug Tracker" = "https://simple-jira.atlassian.net/jira/software/c/projectsFND"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = ">=1.35.93"
botocore = ">=1.35.93"
ruamel-yaml = "^0.18.10"
pyyaml = "^6.0.2"
cfnresponse = ">=1.1.4"
cryptography = "^42.0.8"
argcomplete = ">=3.3.0"
jmespath = "^1.0.1"
python-dateutil = ">=2.9.0.post0"
s3transfer = ">=0.10.1"
six = ">=1.16.0"
urllib3 = "^2.2.3"
xmltodict = ">=0.13.0"
yq = ">=3.4.3"
rich = "^13.9.4"
fastapi = "^0.115.4"
uvicorn = "^0.34.0"
httpx = "^0.28.1"

[tool.poetry.dependencies.sck-core-api]
path = "../sck-core-api"
develop = true

[tool.poetry.dependencies.sck-core-invoker]
path = "../sck-core-invoker"
develop = true

[tool.poetry.dependencies.sck-core-organization]
path = "../sck-core-organization"
develop = true

[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[tool.poetry.scripts]
core = "core_cli.core:main"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_cli/__init__.py"]

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
pytest = "^8.3.3"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pylance = "^0.21.0"
types-pyyaml = "^6.0.12.20240917"
boto3-stubs = ">=1.35.93"
flake8 = "^7.1.1"
cfn-lint = "^1.22.3"
uvicorn = "^0.34.0"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
types-requests = "^2.32.0.20241016"
